--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,3 +29,4 @@
 @import 'pages/solicitar-boleta';
 @import 'pages/registro-usuario';
 @import 'pages/cuenta-personas';
+@import 'pages/datos-personales';
