--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 // Configuration
 @import 'base/variables';
 @import 'base/reset';
+@import 'base/classes';
 @import 'base/mixins';
 @import 'base/fonts';
 
