--- a/css/main.css
+++ b/css/main.css
@@ -3141,13 +3141,6 @@ input::placeholder {
   display: none !important;
 }
 
-/* Custom Class Bootstrap */
-.form-control-lg {
-  padding: 1rem 1rem;
-  border-radius: 8px;
-  font-size: 16px;
-}
-
 /* form switch toggle */
 .box-switch {
   display: -webkit-box;
@@ -3586,6 +3579,17 @@ input::placeholder {
   color: #5F6268;
   padding-left: 60px;
   margin-top: 8px;
+}
+
+.form-control {
+  border: 1px solid #B7C0CE;
+}
+
+/* Custom Class Bootstrap */
+.form-control-lg {
+  padding: 1rem 1rem;
+  border-radius: 8px;
+  font-size: 16px;
 }
 
 /* Form Validacion */
