se crea pagina descarga boleta

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,7 @@
 @import 'pages/cuenta-personas';
 @import 'pages/datos-personales';
 @import 'pages/login-portal';
+@import 'pages/descarga-boleta';
 
 
 /* .page {
