--- a/scss/pages/_solicitar-boleta.scss
+++ b/scss/pages/_solicitar-boleta.scss
@@ -64,7 +64,7 @@
     margin-top: 7px;
     margin: 7px 0 0 15px;
     li {
-        color: gray;
+        color: $gray-dark;
         font-size: 12px;
     }
 }
