--- a/css/main.css
+++ b/css/main.css
@@ -3400,6 +3400,20 @@ input::placeholder {
   color: #2274FF;
 }
 
+.btn-blanco {
+  border: 1px solid #2274FF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 8px;
+  font-size: 16px;
+  color: #2274FF;
+  font-weight: bold;
+  width: 100%;
+}
+.btn-blanco:hover {
+  color: #2274FF;
+}
+
 .btn-redes {
   color: white;
   font-size: 16px;
@@ -6035,7 +6049,7 @@ section.section-trabajos {
   margin: 7px 0 0 15px;
 }
 .list-input li {
-  color: gray;
+  color: #B7C0CE;
   font-size: 12px;
 }
 
@@ -6748,6 +6762,189 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
   padding-left: 20px;
   font-size: 12px;
   color: #B7C0CE;
+}
+
+.page-descarga-boleta {
+  /* background-position: top center; */
+  background-position: 32px 0;
+  background-repeat: no-repeat;
+  /*     .header-top {
+          padding: 0;
+          .header-top-inner {
+              height: 40px;
+          }
+      } */
+}
+.page-descarga-boleta .main {
+  padding: 50px 0 0 0;
+}
+
+.content-page-boleta {
+  background-color: white;
+  padding: 20px 30px 60px 30px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+@media only screen and (min-width: 830px) {
+  .content-page-boleta {
+    padding: 36px 60px 75px 60px;
+  }
+}
+
+.title-boleta {
+  color: #003287;
+  font-size: 27px;
+  font-weight: bold;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+}
+@media only screen and (min-width: 830px) {
+  .title-boleta {
+    font-size: 37px;
+  }
+}
+
+.title-litle {
+  color: #5F6268;
+  font-size: 16px;
+  text-align: center;
+}
+
+.row-btn-boleta {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  border-bottom: 1px dotted #979797;
+  padding-bottom: 20px;
+}
+@media only screen and (min-width: 830px) {
+  .row-btn-boleta {
+    margin-top: 55px;
+    margin-bottom: 41px;
+    padding-bottom: 44px;
+  }
+}
+.row-btn-boleta a {
+  margin-bottom: 20px;
+}
+@media only screen and (min-width: 830px) {
+  .row-btn-boleta a {
+    margin-bottom: 0;
+  }
+}
+
+.form-descarga-boleta .list-input {
+  margin-bottom: 15px;
+}
+@media only screen and (min-width: 830px) {
+  .form-descarga-boleta .list-input {
+    width: 400px;
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
+}
+.form-descarga-boleta .list-input li {
+  font-size: 14px;
+}
+
+.title-video {
+  color: #003287;
+  font-size: 38px;
+  font-weight: bold;
+}
+
+.box-leer-boleta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media only screen and (min-width: 830px) {
+  .box-leer-boleta {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.title-small {
+  color: #2274FF;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.section-video {
+  background-color: #E7F0FF;
+  margin-top: 90px;
+  padding: 60px 0 75px 0;
+}
+
+.box-texto-video p {
+  color: #5F6268;
+  line-height: 28px;
+}
+
+.box-img {
+  margin-bottom: 30px;
+}
+@media only screen and (min-width: 830px) {
+  .box-img {
+    margin-right: 35px;
+    margin-bottom: 0;
+  }
+}
+.box-img img {
+  width: 100%;
+}
+@media only screen and (min-width: 830px) {
+  .box-img img {
+    width: 560px;
+    margin-right: 35px;
+  }
+}
+
+.section-datos {
+  background-color: white;
+}
+
+.item-dato {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 80px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media only screen and (min-width: 830px) {
+  .item-dato {
+    height: 158px;
+  }
+}
+.item-dato i {
+  margin-right: 15px;
+}
+.item-dato span {
+  color: #003DA5;
+  font-size: 16px;
+}
+@media only screen and (min-width: 830px) {
+  .item-dato span {
+    font-size: 20px;
+  }
+}
+.item-dato span a {
+  display: block;
+  color: #003DA5;
+  font-size: 20px;
 }
 
 /* .page {
