--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -30,7 +30,7 @@
 }
 
 .section-login {
-    h2 {
+    /* h2 {
         font-family: $fontRaleway;
         font-weight: bold;
         font-size: 27px;
@@ -38,7 +38,7 @@
         color: $blue-dark;
         display: block;
         width: 100%;
-    }
+    } */
 }
 
 .content-page {
