--- a/scss/pages/_datos-personales.scss
+++ b/scss/pages/_datos-personales.scss
@@ -13,14 +13,11 @@
     padding: 20px;
     background-color: white;
     @include min-screen($tl){
-        margin-top: 15px;
-        padding: 26px 40px 20px 40px;
+        /* margin-top: 15px; */
+        padding: 44px 40px 20px 40px;
     }
     .title-label {
         margin-bottom: 22px;
-    }
-    .form-control {
-        // margin-bottom: 16px;
     }
 }
 
