update css layout

--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -16,9 +16,10 @@ body {
     background-position: top center;
     background-repeat: no-repeat;
 }
-/* .page-recupera-contrasena {
-    background-image: url(../images/m-recuperar-contraseña-1.jpg);
-} */
+.page-recupera-contrasena {
+   /*  background-image: url(../images/m-recuperar-contraseña-1.jpg); */
+   /*  background-image: url(../images/m-menu-principal.jpg); */
+}
 
 .wrapper {
     max-width: 375px;
