--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -3147,7 +3147,7 @@ a {
   background: #2274FF;
   z-index: 100;
   top: 0;
-  padding-top: 40px;
+  padding: 44px 24px 0;
   height: 100vh;
 }
 .nav-menu.active {
@@ -3197,18 +3197,10 @@ a {
   color: #2274FF;
   font-size: 16px;
   font-weight: 700;
-  padding-right: 1.4rem;
-  padding-top: 0.5rem;
-  padding-left: 1.4rem;
-  padding-bottom: 0.5rem;
-}
-@media only screen and (min-width: 830px) {
-  .lista-nav > li > a {
-    color: #5F6268;
-    font-size: 14px;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
+  /* padding-right: 1.4rem;
+  padding-top: 0.5rem; */
+  /* padding-bottom: 0.5rem; */
+  padding: 10px 10px 10px 0;
 }
 .lista-nav > li > a:hover {
   text-decoration: none;
@@ -3331,7 +3323,8 @@ a {
   display: block;
   left: 0;
   width: 100%;
-  height: 3.6px;
+  /* height: 3.6px; */
+  height: 4px;
   background-color: #003287;
   content: "";
 }
@@ -3413,7 +3406,7 @@ a {
   text-align: center;
   margin-bottom: 20px;
   border-bottom: 1px solid white;
-  padding-bottom: 30px;
+  padding-bottom: 42px;
 }
 
 .c-hamburger.is-active span::before,
@@ -3421,18 +3414,16 @@ a {
   background-color: white;
 }
 
-.box-icon-home {
-  padding: 0 22px;
-}
-
 body {
   background-position: top center;
   background-repeat: no-repeat;
 }
 
-/* .page-recupera-contrasena {
-    background-image: url(../images/m-recuperar-contraseña-1.jpg);
-} */
+.page-recupera-contrasena {
+  /*  background-image: url(../images/m-recuperar-contraseña-1.jpg); */
+  /*  background-image: url(../images/m-menu-principal.jpg); */
+}
+
 .wrapper {
   max-width: 375px;
   margin: 0 auto;
