--- a/app/scss/sections/_header.scss
+++ b/app/scss/sections/_header.scss
@@ -30,7 +30,7 @@
     background: $blue;
     z-index: 100;
     top: 0;
-    padding-top: 40px;
+    padding: 44px 24px 0;
     height: 100vh;
     &.active {
         display: block;
@@ -72,16 +72,11 @@
             color: $blue;
             font-size: 16px;
             font-weight: 700;
-            padding-right: 1.4rem;
-            padding-top: 0.5rem;
-            padding-left: 1.4rem;
-            padding-bottom: 0.5rem;
-            @include min-screen($tl){
-                color: $black-light;
-                font-size: 14px;
-                padding-top: 0;
-                padding-bottom: 0;
-            }
+            /* padding-right: 1.4rem;
+            padding-top: 0.5rem; */
+            // padding-left: 1.4rem;
+            /* padding-bottom: 0.5rem; */
+            padding: 10px 10px 10px 0;
             &:hover {
                 text-decoration: none;
             }
@@ -201,7 +196,8 @@
     display: block;
     left: 0;
     width: 100%;
-    height: 3.6px;
+    /* height: 3.6px; */
+    height: 4px;
     background-color: $blue-dark;
     content: "";
   }
@@ -258,7 +254,7 @@
     text-align: center;
     margin-bottom: 20px;
     border-bottom: 1px solid white;
-    padding-bottom: 30px;
+    padding-bottom: 42px;
 }
 
  .c-hamburger.is-active span::before,
@@ -268,5 +264,5 @@
 
   
   .box-icon-home {
-    padding: 0 22px;
+    // padding: 0 22px;
 }
