--- a/app/scss/sections/_header.scss
+++ b/app/scss/sections/_header.scss
@@ -162,6 +162,7 @@
     display: block;
     position: absolute;
     /* right: 0; */
+    top:28px;
     right: 15px;
     overflow: hidden;
     margin: 0;
