--- a/app/scss/base/_text.scss
+++ b/app/scss/base/_text.scss
@@ -15,3 +15,14 @@
     font-size: 14px;
     text-align: center;
 }
+
+
+.title-nombre {
+    color:$blue-dark;
+    font-size: 16px;
+    line-height: 25px;
+    text-align: left;
+    span {
+        font-weight: bold;
+    }
+}
